lib_LTLIBRARIES = libolacommon.la
libolacommon_la_SOURCES =
libolacommon_la_LIBADD = base/libolabase.la \
                         export_map/libolaexportmap.la \
                         file/libolafile.la \
                         io/libolaio.la \
                         math/libolamath.la \
                         messaging/libolamessaging.la \
                         network/libolanetwork.la \
                         protocol/libolaproto.la \
                         rdm/libolardm.la \
                         rpc/libstreamrpcchannel.la \
                         thread/libthread.la \
                         timecode/libtimecode.la \
                         utils/libolautils.la

SUBDIRS = base export_map file web http io protocol rpc utils \
          network math messaging rdm thread testing timecode
