lib_LTLIBRARIES = libolacommon.la
libolacommon_la_SOURCES =
libolacommon_la_LIBADD = base/libolabase.la \
                         dmx/liboladmx.la \
                         file/libolafile.la \
                         io/libolaio.la \
                         math/libolamath.la \
                         messaging/libolamessaging.la \
                         network/libolanetwork.la \
                         rdm/libolardm.la \
                         system/libolasystem.la \
                         thread/libthread.la \
                         utils/libolautils.la

SUBDIRS = base dmx file io utils network \
          math messaging rdm system thread testing
