lib_LTLIBRARIES = libolacommon.la
libolacommon_la_SOURCES =
libolacommon_la_LIBADD = base/libolabase.la \
                         network/libolanetwork.la \
                         rdm/libolardm.la \
                         utils/libolautils.la

SUBDIRS = base utils network \
          rdm testing
