dist_man_MANS = logic_rdm_sniffer.1 \
                ola_artnet.1 \
                ola_dev_info.1 \
                ola_dmxconsole.1 \
                ola_dmxmonitor.1 \
                ola_e131.1 \
                ola_patch.1 \
                ola_recorder.1 \
                ola_set_priority.1 \
                ola_streaming_client.1 \
                ola_trigger.1 \
                ola_uni_info.1 \
                ola_usbpro.1 \
                olad.1 \
                rdmpro_sniffer.1
